<resources>

    //choose branch
    <string name="app_name">Paws</string>
    <string name="choose_existing_branch_button_text">בחר סניף קיים</string>
    <string name="create_new_branch_button_text">צור סניף חדש</string>

    //initial add employee
    <string name="add_employee_massage_text">הכנס את פרטי העובדים בסניף</string>

    //initial add employee
    <string name="next">הבא</string>
    <string name="prev">חזור</string>
    <string name="done">סיים</string>
    <string name="save">שמור</string>
    <string name="delete">מחק</string>
    <string name="cancel">ביטול</string>

    <string name="name">שם</string>
    <string name="phone">טלפון</string>
    <string name="email">מייל</string>
    <string name="id">תעודת זהות</string>

    //for the RecyclerView
    <string name="action_settings">Settings</string>

</resources>
