<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/initial_add_employee_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:text="@string/add_employee_massage_text"
        android:textAppearance="?android:textAppearanceMedium" />

    <ImageButton
        android:id="@+id/initial_add_employee_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_plus_50"
        tools:layout_editor_absoluteX="661dp"
        tools:layout_editor_absoluteY="60dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="432dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        tools:layout_editor_absoluteX="585dp"
        tools:layout_editor_absoluteY="432dp" />

</android.support.constraint.ConstraintLayout>