<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/employeeCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layoutDirection="rtl"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/employee_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/employee_data_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/employee_data_icon"
            android:text="@string/name"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/employee_data_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/employee_data_name"
            android:layout_toEndOf="@+id/employee_data_icon"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/employee_data_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/employee_data_phone"
            android:layout_toEndOf="@+id/employee_data_icon"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceMedium"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>